--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
                 <input type="text" name="mail" id="mail" class="inp" placeholder="Введите Ваш email" required="">
             </div>
             <input type="text" name="checkCouponCode" class="inp" placeholder="Введите Ваш код с чека">
-            <input type="submit" value="Зарегистрироваться">
+            <div class="btn-wrapper">
+                <img src="img/JFbr5ZI.png" alt="" class="lumers">
+                <input type="submit" value="Зарегистрироваться">
+            </div>
         </form>
         <div class="offer__rezult">
             <b>18.06.2018</b> с помощью сервиса <b>random.org</b> мы определим <b>пять победителей</b>, которые получат путевки.
