--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div id="mailError"></div>
                 <input type="text" name="mail" id="mail" class="inp" placeholder="Введите Ваш email" required="">
             </div>
-            <input type="text" name="checkCouponCode" class="inp" placeholder="Введите Ваш код с чека">
+            <input type="text" name="couponcode" class="inp" placeholder="Введите Ваш код с чека">
             <div class="btn-wrapper">
                 <img src="img/JFbr5ZI.png" alt="" class="lumers">
                 <input type="submit" value="Зарегистрироваться">
