--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="dist/style.main.css">
-    <!-- <script src="minFiles/script.min.js"></script> -->
-    <script src="js/script.js"></script>
+    <script src="minFiles/script.min.js"></script>
+    <!-- <script src="js/script.js"></script> -->
     <title>Antoshka</title>
 </head>
 
